--- a/app/src/main/res/layout-w600dp/content_main.xml
+++ b/app/src/main/res/layout-w600dp/content_main.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/contenedor_pequeno"
+    android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,4 +12,17 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.upvmaster.carlos.audiolibros.activities.MainActivity"
     tools:showIn="@layout/activity_main">
+
+    <fragment
+        android:id="@+id/selector_fragment"
+        android:name="com.upvmaster.carlos.audiolibros.fragments.SelectorFragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+    <fragment
+        android:id="@+id/detalle_fragment"
+        android:name="com.upvmaster.carlos.audiolibros.fragments.DetalleFragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 </RelativeLayout>
