--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,13 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"> <!--El contenido de la actividad -->
+    android:fitsSystemWindows="true">
+    <!--El contenido de la actividad -->
     <include
         layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" /> <!--El contenido del Navigation Drawer -->
+        android:layout_height="match_parent" />
+    <!--El contenido del Navigation Drawer -->
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
