--- a/app/src/main/res/layout-w600dp/content_main.xml
+++ b/app/src/main/res/layout-w600dp/content_main.xml
@@ -10,12 +10,13 @@
     tools:context="com.upvmaster.carlos.audiolibros.activities.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <fragment
-        android:id="@+id/selector_fragment"
-        android:name="com.upvmaster.carlos.audiolibros.fragments.SelectorFragment"
+    <LinearLayout
+        android:id="@+id/contenedor_izquierdo"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:orientation="vertical" />
+
     <fragment
         android:id="@+id/detalle_fragment"
         android:name="com.upvmaster.carlos.audiolibros.fragments.DetalleFragment"
