--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_detalle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="#ffff00"
     tools:context=".activities.MainActivity">
 
     <RelativeLayout
@@ -20,6 +21,7 @@
             android:layout_alignParentTop="true"
             android:gravity="center"
             android:text="Título"
+            android:visibility="gone"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@android:color/black" />
@@ -34,6 +36,7 @@
             android:gravity="center"
             android:text="Autor"
             android:textAlignment="center"
+            android:visibility="gone"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@android:color/darker_gray" />
 
@@ -44,7 +47,28 @@
             android:layout_below="@id/autor"
             android:layout_centerHorizontal="true"
             android:scaleType="fitCenter"
+            android:visibility="gone"
             android:src="@mipmap/ic_launcher" />
+
+        <com.upvmaster.carlos.audiolibros.views.ZoomSeekBar
+            android:id="@+id/zoombar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:background="@color/accent"
+            android:layout_below="@id/portada"
+            app:altoBar="40dp"
+            app:altoGuia="4dp"
+            app:altoNumeros="15dp"
+            app:altoPalanca="40dp"
+            app:altoRegla="10dp"
+            app:altoTexto="12dp"
+            app:anchoPalanca="10dp"
+            app:colorGuia="#FF9050"
+            app:colorPalanca="#FF0000"
+            app:colorRegla="#B0B070"
+            app:colorTexto="#006e6e" />
     </RelativeLayout>
+
 
 </android.support.v4.widget.NestedScrollView>
