--- a/app/src/main/res/xml/widget.xml
+++ b/app/src/main/res/xml/widget.xml
@@ -7,4 +7,7 @@
     android:minWidth="110dp"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:configure="com.upvmaster.carlos.audiolibros.widget.ConfiguraWidget"
+    android:widgetCategory="home_screen">
+
+</appwidget-provider>
