--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fragment_detalle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    tools:context=".Main.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
