Proyecto Ordenado, queda MVP de DetalleFragment y Clean de DetalleFragment. Tema 4 entero

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_horizontal_margin"
     android:gravity="center"
-    tools:context="com.upvmaster.carlos.audiolibros.activities.SplashActivity">
+    tools:context="com.upvmaster.carlos.audiolibros.common.view.SplashActivity">
 
     <ImageView
         android:id="@+id/iv_splash_logo"
