--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,6 +7,6 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.upvmaster.carlos.audiolibros.Main.MainActivity"
+    tools:context="com.upvmaster.carlos.audiolibros.main.view.MainActivity"
     tools:showIn="@layout/activity_main">
 </LinearLayout>
