--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.upvmaster.carlos.audiolibros.Main.MainActivity">
+    tools:context="com.upvmaster.carlos.audiolibros.main.view.MainActivity">
     <item
         android:id="@+id/menu_ultimo"
         android:icon="@android:drawable/ic_menu_set_as"
