Inclusion de Firebase hasta pagina 15. Falta lo de  verificar correo y factorizar la app. Aún queda MVP de Detalle y Clean allí

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,9 +19,10 @@
         android:src="@android:drawable/sym_def_app_icon" />
 
     <TextView
+        android:id="@+id/txtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
+        android:paddingTop="0dp"
         android:text="Audiolibros"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
