--- a/app/src/main/res/layout/activity_custom_login.xml
+++ b/app/src/main/res/layout/activity_custom_login.xml
@@ -88,18 +88,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp" />
+        <Button
+            android:id="@+id/btnLoginFirebaseUI"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#d0021b"
+            android:onClick="signFirebaseUI"
+            android:padding="8dp"
+            android:text="@string/login_msg_login_UI"
+            android:textColor="#fff" />
     </LinearLayout>
-    <Button
-        android:id="@+id/btnLoginFirebaseUI"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#d0021b"
-        android:onClick="signFirebaseUI"
-        android:layout_below="@+id/layoutSocial"
-        android:layout_centerHorizontal="true"
-        android:padding="8dp"
-        android:text="@string/login_msg_login_UI"
-        android:textColor="#fff" />
+
 
     <ProgressBar
         android:id="@+id/progressBar"
